--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -70,9 +70,11 @@
 	&__count {
 		// Style the outer container
 		display: inline-flex;
+		justify-content: space-between;
+		align-items: center;
 		border: 1px solid var(--clr-placeholder);
 		border-radius: 0.75rem;
-		padding: 1rem;
+		padding: 1rem 0.625rem;
 		margin-top: auto;
 		width: 82%;
 
@@ -82,12 +84,29 @@
 			-webkit-appearance: textfield;
 			-moz-appearance: textfield;
 			appearance: textfield;
-			width: 100%;
+			width: 60%;
+			font-size: 1rem;
+			text-align: center;
+			background-color: transparent;
+			border: none;
 		}
 		
 		input[type='number']::-webkit-inner-spin-button,
 		input[type='number']::-webkit-outer-spin-button {
 			-webkit-appearance: none;
+		}
+
+		button {
+			outline: none;
+			border: none;
+			border-radius: 0.25rem;
+			width: 20%;
+			aspect-ratio: 1;
+			background-color: #e0e0e0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			color: var(--clr-placeholder);
 		}
 
 		
