--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,15 +1,21 @@
 @use '../abstracts' as abs;
 
-.checkout {
-
-	&__title {
-		margin-top: 2rem;
-		margin-bottom: 1.25rem;
-		margin-left: 1.125rem;
-		font-size: 1.5rem;
-		color: var(--clr-dark-gray);
-	}
+.title {
+	margin-top: 2rem;
+	margin-bottom: 1.25rem;
+	margin-left: 1.125rem;
+	font-size: 1.5rem;
+	color: var(--clr-dark-gray);
 }
+
+.checkout {
+ display: flex;
+ flex-direction: column;
+ gap: 2.5rem;
+	
+}
+
+// Order details component
 
 .order {
 	margin-inline: 0.75rem;
@@ -125,6 +131,99 @@
 	justify-content: space-between;
 }
 
+
+// Customer information form
+
+.form {
+	margin-inline: 0.75rem;
+	margin-bottom: 5.9375rem;
+	display: flex;
+	flex-direction: column;
+	gap: 2.8125rem;
+
+	 &__check {
+		 label {
+			 font-size: 0.625rem;
+			 color: var(--clr-label);
+		 }
+	 }
+
+	 &__submit {
+		 background-color: var(--clr-orange);
+		 color: #fff;
+		 font-size: 1rem;
+		 width: 50%;
+		 padding-block: 1rem;
+		 border: none;
+		 border-radius: 0.75rem;
+		 align-self: flex-end;
+	 }
+}
+
+.form-section {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+
+	&__title {
+		font-size: 0.875rem;
+	}
+
+	&__row {
+		display: flex;
+		gap: 1.5rem;
+
+		.form-section__input {
+			width: 50%;
+		}
+	}
+
+	&__input {
+		display: flex;
+		flex-direction: column;
+		gap: 0.3125rem;
+
+		label {
+			font-size: 0.625rem;
+			color: var(--clr-label);
+		}
+
+		.input-wrapper {
+			display: flex;
+			align-items: center;
+			gap: 0.75rem;
+			padding: 0.75rem;
+
+			border: 1px solid var(--clr-placeholder);
+			border-radius: 0.75rem;
+
+			.material-icons {
+				color: var(--clr-placeholder);
+				width: 1rem;
+			}
+
+			input,
+			select {
+				padding: 0;
+				width: 100%;
+				border: 0;
+				color: var(--clr-dark);
+				font-size: 0.75rem;
+
+				&:focus {
+					outline: none;
+				}
+
+				&::placeholder {
+					color: var(--clr-placeholder);
+					font-size: 0.75rem;
+				}
+			}
+		}
+	}
+}
+
+// Footer
 .footer {
 	display: flex;
 	justify-content: center;
