--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -35,6 +35,7 @@ header {
 		width: 66%;
 		max-width: abs.rem(960);
 		margin-inline: auto;
+		// gap: 0;
 	}
 	
 }
@@ -52,7 +53,8 @@ header {
 	align-items: center;
 
 	@include abs.breakpoint(large) {
-		width: 40%;
+		width: 42%;
+		padding: 1.875rem;
 		margin-inline: 0;
 		align-self: flex-start;
 	}
@@ -63,6 +65,11 @@ header {
 	display: flex;
 	flex-direction: column;
 	gap: 1.875rem;
+
+	@include abs.breakpoint(large) {
+		margin-bottom: 6rem;
+		gap: 2rem;
+	}
 }
 
 .item {
@@ -71,7 +78,9 @@ header {
 
 	&__img {
 		width: 40%;
+		aspect-ratio: 1;
 		border-radius: 0.75rem;
+		align-self: center;
 	}
 
 	&__data {
@@ -84,6 +93,10 @@ header {
 		color: var(--clr-dark-gray);
 		font-size: 0.75rem;
 		margin-bottom: 0.5rem;
+
+		@include abs.breakpoint(large) {
+			font-size: 1rem;
+		}
 	}
 
 	&__price {
@@ -94,12 +107,20 @@ header {
 		&-discounted {
 			color: var(--clr-orange);
 			font-size: 0.875rem;
+
+			@include abs.breakpoint(large) {
+				font-size: 1rem;
+			}
 		}
 
 		&-original {
 			color: var(--clr-dark-gray);
 			font-size: 0.625rem;
 			text-decoration: line-through;
+
+			@include abs.breakpoint(large) {
+				font-size: 0.75rem;
+			}
 		}
 	}
 
@@ -159,6 +180,12 @@ header {
 	font-size: 0.875rem;
 	display: flex;
 	justify-content: space-between;
+
+	&__label {
+		@include abs.breakpoint(large) {
+			font-size: 1.125rem;
+		}
+	}
 }
 
 
