--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -35,6 +35,7 @@ header {
 		width: 66%;
 		max-width: abs.rem(960);
 		margin-inline: auto;
+		margin-bottom: 10rem;
 		// gap: 0;
 	}
 	
@@ -201,6 +202,7 @@ header {
 	@include abs.breakpoint(large) {
 		width: 48%;
 		margin-inline: 0;
+		margin: 0;
 	}
 
 	 &__check {
@@ -210,6 +212,9 @@ header {
 		 label {
 			 font-size: 0.625rem;
 			 color: var(--clr-label);
+			 @include abs.breakpoint(large) {
+				 font-size: 0.75rem;
+			 }
 		 }
 	 }
 
@@ -230,8 +235,16 @@ header {
 	flex-direction: column;
 	gap: 1rem;
 
+	@include abs.breakpoint(large) {
+		gap: 1.25rem;
+	}
+
 	&__title {
 		font-size: 0.875rem;
+
+		@include abs.breakpoint(large) {
+			font-size: 1.125rem;
+		}
 	}
 
 	&__row {
@@ -251,6 +264,10 @@ header {
 		label {
 			font-size: 0.625rem;
 			color: var(--clr-label);
+
+			@include abs.breakpoint(large) {
+				font-size: 0.75rem;
+			}
 		}
 
 		.input-wrapper {
@@ -275,6 +292,10 @@ header {
 				color: var(--clr-dark);
 				font-size: 0.75rem;
 
+				@include abs.breakpoint(large) {
+					font-size: 1rem;
+				}
+
 				&:focus {
 					outline: none;
 				}
@@ -282,6 +303,10 @@ header {
 				&::placeholder {
 					color: var(--clr-placeholder);
 					font-size: 0.75rem;
+
+					@include abs.breakpoint(large) {
+						font-size: 1rem;
+					}
 				}
 			}
 		}
